--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,6 +40,7 @@ jobs:
       env:
         OBLIWONK_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         OBLIWONK_USERNAME: ${{ secrets.OBLIWONK_USERNAME }}
+        OBLIWONK_README: README.md 
         OBLIWONK_COMMIT_MESSAGE: ${{ secrets.OBLIWONK_COMMIT_MESSAGE }}
         OBLIWONK_MATH_PROVIDER_URL: ${{ secrets.OBLIWONK_MATH_PROVIDER_URL }}
         OBLIWONK_JOKE_PROVIDER_URL: ${{ secrets.OBLIWONK_JOKE_PROVIDER_URL }}
