--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
     
     - name: Run obliwonk
       env:
-        OBLIWONK_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        OBLIWONK_GITHUB_TOKEN: ${{ secrets.OBLIWONK_TOKEN }}
         OBLIWONK_USERNAME: ${{ secrets.OBLIWONK_USERNAME }}
         OBLIWONK_README: README.md 
         OBLIWONK_COMMIT_MESSAGE: ${{ secrets.OBLIWONK_COMMIT_MESSAGE }}
