--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go
 
 on:
   schedule:
-    - cron: 0 */2 * * *
+    - cron: 0 */3 * * *
 
 jobs:
 
@@ -28,7 +28,7 @@ jobs:
             dep ensure
         fi
 
-    - name: Build
+    - name: Build a binary
       run: go build
     
     - name: Touch .env
