--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,8 +1,8 @@
 name: Go
 
 on:
-  schedule:
-    - cron: 0 */18 * * *
+#   schedule:
+#     - cron: 0 */18 * * *
   push:
     branches:
       - master
